--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.3",
     "font-awesome": "^4.7.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-loading-skeleton": "^3.1.0",
     "react-multi-carousel": "^2.8.5",
+    "react-nucleo": "^0.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
